[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ncat-api"
version = "0.0.1"
authors = [
  { name="Alexander Faus", email="alexfaus08@gmail.com" },
]
description = "NCAT API Endpoint wrapper for python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/National-Flood-Experts/ncat-python"
"Bug Tracker" = "https://github.com/National-Flood-Experts/ncat-python/issues"